# projet_python_2_mba

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  MANIFEST.in  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
src/banking_api/: __init__.py  app.py
src/banking_api/models/: __init__.py  customer.py  stats.py  system.py  transaction.py
src/banking_api/routes/: __init__.py  customers.py  fraud.py  stats.py  system.py  transactions.py
src/banking_api/services/: customer_service.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
src/banking_api/utils/: data_loader.py
tests/: conftest.py
tests/features/: test_api_features.py
tests/unit/: test_customer_routes.py  test_fraud_routes.py  test_services.py  test_stats_routes.py  test_system_routes.py  test_transactions_routes.py
